; -- metadata ---------------

[metadata]
name = hveto
author = Joshua Smith
author_email = joshua.smith@ligo.org
license = GPLv3
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://github.com/gwdetchar/hveto/
description = A python implementation of the HierarchicalVeto (hveto) algorithm.
long_description = file: README.rst
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
scripts =
	bin/hveto
	bin/hveto-cache-events
	bin/hveto-safety
	bin/hveto-trace
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires =
	setuptools >=30.3.0
install_requires =
	gwdetchar >= 0.5.0
	gwpy >=0.14.0
	gwtrigfind
	jinja2
	lxml
	MarkupPy >=1.14
	matplotlib >=1.5
	numpy >=1.10
	pathlib ; python_version < '3'
	scipy
tests_require =
	pytest >=3.1.0
	mock ; python_version < '3'

[options.extras_require]
doc =
	sphinx
	numpydoc
	sphinx_rtd_theme
	sphinxcontrib_programoutput
	sphinxcontrib_epydoc

[versioneer]
VCS = git
style = pep440
versionfile_source = hveto/_version.py
versionfile_build = hveto/_version.py
tag_prefix =
parentdir_prefix =

; -- tools ------------------

[coverage:run]
source = hveto
omit =
	hveto/tests/*
	hveto/_version.py
