; -- metadata ---------------

[versioneer]
VCS = git
style = pep440
versionfile_source = hveto/_version.py
versionfile_build = hveto/_version.py
tag_prefix =
parentdir_prefix =

[bdist_wheel]
universal = 1

[metadata]
name = hveto
author = Joshua Smith
author_email = joshua.smith@ligo.org
license = GPL-3.0-or-later
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://github.com/gwdetchar/hveto/
description = A python implementation of the HierarchicalVeto (hveto) algorithm.
long_description = file: README.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >=30.3.0
install_requires =
	gwdetchar >= 2.0.0
	gwpy >=2.0.0
	gwtrigfind
	lxml
	MarkupPy >=1.14
	matplotlib >=3.1
	numpy >=1.10
	python-ligo-lw >= 1.5.0
	scipy
tests_require =
	coverage
	flake8
	pytest >=3.1.0

[options.entry_points]
console_scripts =
	hveto = hveto.__main__:main
	hveto-cache-events = hveto.cli.cache_events:main
	hveto-trace = hveto.cli.trace:main

[options.extras_require]
doc =
	sphinx
	numpydoc
	sphinx_rtd_theme
	sphinxcontrib_programoutput
	sphinxcontrib_epydoc

[tool:pytest]
; print skip reasons
addopts = -r s

; -- tools ------------------

[coverage:run]
source = hveto
omit =
	hveto/tests/*
	hveto/*version*

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	hveto/_version.py,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,
